# Computer-Graphics-animation

./: CMakeLists.txt  README.md
src/: ImageHandler.h  MatrixHandler.h  TextureDrawer.h  TextureHandler.h  helper.h  main.cpp
